[gd_scene load_steps=2 format=3 uid="uid://elp8cbwwtets"]

[ext_resource type="Script" path="res://scripts/inventory_stuff/slot.gd" id="1_gr6n7"]

[node name="Slot" type="Panel"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)
script = ExtResource("1_gr6n7")

[node name="ItemTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = -3.0
offset_right = 44.0
offset_bottom = 37.0

[node name="QuantityLabel" type="Label" parent="ItemTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 6.0
offset_bottom = 11.0
theme_override_font_sizes/font_size = 7
text = "0"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
